+Добавил новый экран маршрутов +Исправил баги на главном экране

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".SwipeChoice"/>
-        <activity android:name=".Layers"/>
+        <activity android:name=".Layersss"/>
+        <activity android:name=".Schedule"/>
+        <activity android:name=".OfferParking"/>
     </application>
 
 </manifest>
