+Добавили уведомления при приближении транспорта с меньшей загруженностью чем тот что ближе к остановке +Улучшили пользовательский интерфейс в плане отклика +Добавили новые настройки для более удобного кастомизирования и избавления интерфейса от проблемы награможденности +Исправили баги прошлых версий

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         <activity android:name=".Layersss"/>
         <activity android:name=".Schedule"/>
         <activity android:name=".OfferParking"/>
+        <activity android:name=".Params"/>
+        <activity android:name=".Route"/>
     </application>
 
 </manifest>
